--- a/css/style.css
+++ b/css/style.css
@@ -8049,7 +8049,7 @@ h1, h2, h3, h4, h5,
 
 .wrap {
   background: #fff;
-  padding: 25px 0; }
+  padding: 25px 0px 0px 0px; }
   .wrap .top-wrap .icon {
     width: 44px;
     height: 44px;
